takers: dashboard whitespace issue fixed

--- a/takers/src/components/Dashboard-exam.css
+++ b/takers/src/components/Dashboard-exam.css
@@ -7,6 +7,7 @@
 
 .Dashboard-board .top {
   display: flex;
+  align-items: flex-start;
   justify-content: space-between;
 }
 
@@ -14,7 +15,7 @@
   ********************************************/
 .answer-status {
   padding: 0.5rem 1rem;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
 }
 .answer-status i {
   color: var(--yellow-lighter);
@@ -47,4 +48,12 @@
 
 .Dashboard-board .board-settings .button span {
   margin-left: 0.5rem;
+}
+
+/* Responsive 
+************************************/
+@media (max-width: 480px) {
+  .Dashboard-board {
+    padding: 1.25rem 1rem;
+  }
 }
